<resources>
    <string name="app_name">有趣游戏</string>
    <string name="app_name_">有趣游戏平台</string>
    <!-- 腾讯微博 -->
    <string name="authorize">授权</string>
    <string name="add">发表</string>
    <string name="readd">一键转播</string>
    <string name="common">常用接口</string>
    <string name="delauthorize">注销</string>
    <string name="guide_info">立即进入</string>
    <string name="btn_close_guide">关闭</string>
    <string name="guide_begin">开始</string>
    <string name="public_channel_name">公共频道</string>
    <string name="my_channel_name">我的频道</string>
    <string name="campus_service_name">服务频道</string>
    <string name="more_name">更多</string>
    <string name="checknet">请检查网络是否连接?</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit_button">退出</string>
    <string name="pageNotFound">该功能需要登录才可正常使用!</string>
    <string name="_sdcard_crash_">/sdcard/crash/</string>
    <string name="loading">正在加载&#8230;</string>
    <!-- 设置 -->
    <string name="more_message_set_tupain">2G/3G网络下不显示图片</string>
    <!-- 更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_title_tixin">旧版本会导致某些程序错误，希望使用新版本</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="alert_dialog_tip">确定要退出嘛?</string>
    <string name="finish_tea_info">确定</string>
    <string name="cancel">取消</string>
    <string name="homeActivity_autoComplete">周边搜索</string>
    <!-- login -->
    <string name="login_username">账号：</string>
    <string name="login_password">密码：</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_WeChat">微信登录</string>
    <string name="login_QQ">QQ登录</string>
    <string name="login_three_party">------- 使用其他方式登录 -------</string>
</resources>
