<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bj_huishe"
    android:orientation="vertical">

    <include layout="@layout/head"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:background="@color/unified"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="60dip"
            android:layout_marginRight="20dip"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginTop="80dip"
                android:layout_marginRight="25dip"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_username" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/login_username"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="25dip"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/login_password"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="30dip"
                android:layout_marginBottom="25dip"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login_login"
                    android:text="@string/login_login"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="30dip"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login_register"
                    android:text="@string/login_register"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <com.osx.jzz.garp.rewrite.CustomImageView
            android:id="@+id/login_touxian"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:src="@drawable/ceshi_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/login_three_party"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="20dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="20dip"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/img_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_WeChat"
                    android:layout_marginTop="10dip"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/img_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_QQ"
                    android:layout_marginTop="10dip"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
